src/snapshots/pgtop__snapshot_tests__confirm_terminate_popup_partial_typing.snap
---
source: src/snapshot_tests.rs
expression: render_snapshot(&mut app)
---
"┌ pgtop · test — Activity (1 backends) ────────────────────────────────────────────────────────────────────────────────┐"
"│ Activity │ Locks │ Top Queries │ Replication │ Databases │ Tables │ Waits                                            │"
"│ TPS: — ─────────────────────────────── Active: — ───────────────────────────── Cache hit: — ─────────────────────────│"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│pid ▲   user           state                wait            duration   query                                          │"
"│505     eve            idle in transaction  —               —          BEGIN                                          │"
"│                           ┌ Confirm terminate ───────────────────────────────────────────┐                           │"
"│                           │                                                              │                           │"
"│                           │  Send pg_terminate_backend to pid 505?                       │                           │"
"│                           │                                                              │                           │"
"│                           │  This is destructive: it will kill the                       │                           │"
"│                           │  entire session, not just the current query.                 │                           │"
"│                           │                                                              │                           │"
"│                           │  Type yes to confirm:                                        │                           │"
"│                           │    > ye█                                                     │                           │"
"│                           └──────────────────────────────────────────────────────────────┘                           │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│ type yes + Enter to confirm  ·  Esc abort                                                                            │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
