src/snapshots/pgtop__snapshot_tests__databases_tab.snap
---
source: src/snapshot_tests.rs
expression: render_snapshot(&mut app)
---
"┌ pgtop · test — Databases (2 databases) ──────────────────────────────────────────────────────────────────────────────┐"
"│ Activity │ Locks │ Top Queries │ Replication │ Databases │ Tables │ Waits                                            │"
"│ TPS: — ─────────────────────────────── Active: — ───────────────────────────── Cache hit: — ─────────────────────────│"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│database                                   conns   tps      commits       rollbacks   cache hit  temp       deadlocks │"
"│app                                        42      125      1.2M          89          99.0%      0 B        0         │"
"│reports                                    3       —        4321          12          90.9%      1.0 MB     2         │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│ q quit  ·  1234567 tabs  ·  ↑↓ move  ·  x/X export                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
