src/snapshots/pgtop__snapshot_tests__detail_popup.snap
---
source: src/snapshot_tests.rs
expression: render_snapshot(&mut app)
---
"┌ pgtop · test — Activity (1 backends) ────────────────────────────────────────────────────────────────────────────────┐"
"│ Activity │ Locks │ Top Queries │ Replication │ Databases │ Tables │ Waits                                            │"
"│ TPS: — ─────────────────────────────── Active: — ───────────────────────────── Cache hit: — ─────────────────────────│"
"│                                                                                                                      │"
"│           ┌ Detail · pid 404 ────────────────────────────────────────────────────────────────────────────┐           │"
"│pid ▲   use│user: dave                                                                                    │           │"
"│404     dav│database: app                                                                                 │eated_at > │"
"│           │application: psql                                                                             │           │"
"│           │client: 10.0.0.7                                                                              │           │"
"│           │backend type: —                                                                               │           │"
"│           │                                                                                              │           │"
"│           │state: active                                                                                 │           │"
"│           │wait: —                                                                                       │           │"
"│           │                                                                                              │           │"
"│           │backend started: —                                                                            │           │"
"│           │tx started: —                                                                                 │           │"
"│           │query started: 11:59:53                                                                       │           │"
"│           │state changed: —                                                                              │           │"
"│           │                                                                                              │           │"
"│           └──────────────────────────────────────────────────────────────────────────────────────────────┘           │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│ Esc close  ·  q quit                                                                                                 │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
