src/snapshots/pgtop__snapshot_tests__locks_tab_with_blocking_pair.snap
---
source: src/snapshot_tests.rs
expression: render_snapshot(&mut app)
---
"┌ pgtop · test — Locks (1 waiting / 2 locks) ──────────────────────────────────────────────────────────────────────────┐"
"│ Activity │ Locks │ Top Queries │ Replication │ Databases │ Tables │ Waits                                            │"
"│ TPS: — ─────────────────────────────── Active: — ───────────────────────────── Cache hit: — ─────────────────────────│"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│pid     type            mode                   ✓   object                                                             │"
"│1001    relation        AccessExclusiveLock    ✓   public.orders                                                      │"
"│1002    relation        AccessShareLock        ⏳  public.orders                                                      │" Hidden by multi-width symbols: [(49, " ")]
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│ q quit  ·  1234567 tabs  ·  ↑↓ move  ·  x export json                                                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
