src/snapshots/pgtop__snapshot_tests__replication_tab_with_two_replicas.snap
---
source: src/snapshot_tests.rs
expression: render_snapshot(&mut app)
---
"┌ pgtop · test — Replication (2) ──────────────────────────────────────────────────────────────────────────────────────┐"
"│ Activity │ Locks │ Top Queries │ Replication │ Databases │ Tables │ Waits                                            │"
"│ TPS: — ─────────────────────────────── Active: — ───────────────────────────── Cache hit: — ─────────────────────────│"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│pid     application        state          sync       replay lag   replay lsn                                          │"
"│9001    walreceiver-1      streaming      sync       0.1s         0/3000020                                           │"
"│9002    walreceiver-2      streaming      async      2.5s         0/2FFFFF8                                           │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│ q quit  ·  1234567 tabs  ·  ↑↓ move  ·  x/X export                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
