src/snapshots/pgtop__snapshot_tests__top_queries_tab_available.snap
---
source: src/snapshot_tests.rs
expression: render_snapshot(&mut app)
---
"┌ pgtop · test — Top Queries (top 2) ──────────────────────────────────────────────────────────────────────────────────┐"
"│ Activity │ Locks │ Top Queries │ Replication │ Databases │ Tables │ Waits                                            │"
"│ TPS: — ─────────────────────────────── Active: — ───────────────────────────── Cache hit: — ─────────────────────────│"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│calls      total ms       mean ms    rows       query                                                                 │"
"│     12345       56789.12       4.60    9876543 SELECT * FROM orders WHERE created_at > now() - interval '1 day'      │"
"│      4321        8765.40       2.03       4321 UPDATE accounts SET balance = balance - $1 WHERE id = $2              │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│ q quit  ·  1234567 tabs  ·  ↑↓ move  ·  x/X export                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
