src/snapshots/pgtop__snapshot_tests__waits_tab_with_aggregated_rows.snap
---
source: src/snapshot_tests.rs
expression: render_snapshot(&mut app)
---
"┌ pgtop · test — Waits (28 waiting) ───────────────────────────────────────────────────────────────────────────────────┐"
"│ Activity │ Locks │ Top Queries │ Replication │ Databases │ Tables │ Waits                                            │"
"│ TPS: — ─────────────────────────────── Active: — ───────────────────────────── Cache hit: — ─────────────────────────│"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│type                 event                                                                           count    share   │"
"│Lock                 relation                                                                        17       60.7%   │"
"│Client               ClientRead                                                                      8        28.6%   │"
"│IO                   DataFileRead                                                                    3        10.7%   │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│ q quit  ·  1234567 tabs  ·  ↑↓ move  ·  x/X export                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
